new proj/src/objects/GE_HQ_TAM_SAS_By_Country__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier2__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier1__c</controllingField>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Optimization (TPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier3__c</fullName>
        <label>Tier 4 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier2__c</controllingField>
            <picklistValues>
                <fullName>Sub Sea Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Turbine Inlet Systems (GTIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geometry &amp; Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threatscan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Field Services (Tx-Fs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer Mount Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions, Modifications &amp; Uprates (CM&amp;U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Service Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Offering__c</fullName>
        <label>Offering</label>
        <picklist>
            <controllingField>GE_HQ_Product_Services__c</controllingField>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Oppty_Driver__c</fullName>
        <label>Oppty Driver</label>
        <picklist>
            <controllingField>GE_HQ_Sub_P_L__c</controllingField>
            <picklistValues>
                <fullName>Field Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Product_Services__c</fullName>
        <label>Product Services</label>
        <picklist>
            <controllingField>GE_HQ_Oppty_Driver__c</controllingField>
            <picklistValues>
                <fullName>Power Delivery Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Sales_Region__c</fullName>
        <label>TAM/SAS Sales Region</label>
        <picklist>
            <controllingField>GE_HQ_Country__c</controllingField>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W Europe</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sub_P_L__c</fullName>
        <label>Sub P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_P_L__c</controllingField>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance, Remote, Emissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter-Stokes PG Rad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS - Radiation Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing &amp; Inspection - Advanced Sensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing &amp; Inspection - Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing &amp; Inspection - Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sub_Region__c</fullName>
        <label>TAM/SAS Sub Region</label>
        <picklist>
            <controllingField>GE_HQ_Country__c</controllingField>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Mediterranean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suadi</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2010_SAS__c</fullName>
        <inlineHelpText>Enter SAS value(USD) for Year 2010</inlineHelpText>
        <label>2010 SAS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2010_TAM__c</fullName>
        <inlineHelpText>Enter TAM value(USD) for Year 2010</inlineHelpText>
        <label>2010 TAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2011_SAS__c</fullName>
        <label>2011 SAS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2011_TAM__c</fullName>
        <label>2011 TAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2012_SAS__c</fullName>
        <label>2012 SAS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_X2012_TAM__c</fullName>
        <label>2012 TAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>TAM/SAS By Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Asia_Based_View</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Sales_Region__c</field>
            <operation>equals</operation>
            <value>Asia</value>
        </filters>
        <label>Asia Based View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MEA_Region_Based_View</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Sales_Region__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>MEA Region Based View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P_L_based_View</fullName>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_P_L__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <label>P&amp;L based View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Region_Based_View</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Sales_Region__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>Region Based View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WEurope_Based_View</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Sales_Region__c</columns>
        <columns>GE_HQ_Sub_Region__c</columns>
        <columns>GE_HQ_Country__c</columns>
        <columns>GE_HQ_P_L__c</columns>
        <columns>GE_HQ_Sub_P_L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_HQ_Sales_Region__c</field>
            <operation>equals</operation>
            <value>W Europe</value>
        </filters>
        <label>W Europe Based View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TAM_SAS_{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TAM/SAS By Country</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>